--- a/student-store-api/.env
+++ b/student-store-api/.env
@@ -11,4 +11,4 @@ DB_PORT=
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/student_store?schema=public"
+DATABASE_URL="postgresql://postgres:BingBong@localhost:5432/student_store?schema=public"
